# cv

./: .gitignore  .pre-commit-config.yaml  README.md  cv.tex  main.py  pyproject.toml
sessions/: education.tex  experience.tex  heading.tex  projects.tex  skills.tex
